添加帮助文档弹框 # Reviewed, transaction id: 7523

--- a/lib/client/src/bk-icon/style.css
+++ b/lib/client/src/bk-icon/style.css
@@ -1229,3 +1229,12 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bk-drag-builder:before {
 	content: "\e298";
 }
+.bk-drag-tuopu:before {
+	content: "\e2a2";
+}
+.bk-drag-jiedian:before {
+	content: "\e2a3";
+}
+.bk-drag-rongqi:before {
+	content: "\e2a4";
+}
